--- a/MyRestaurantRequiso.html
+++ b/MyRestaurantRequiso.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Link to main CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/menu.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/menu.png" type="image/x-icon"><!-- Website favicon (small icon in browser tab) -->
+
+    <!-- Link to Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +14,11 @@
 
 </head>
 <body class="customer-page">
-<body>
+
+    <!-- Website favicon (small icon in browser tab) -->
     <header>
         <div class="header">
-
+<!-- Top bar: user account & search -->
             <div class="headerbar">
                 <div class="account">
                     <ul>
@@ -39,6 +43,7 @@
                         </a>
                     </ul>
                 </div>
+                <!-- Top bar: user account & search -->
                 <div class="nav">
                     <ul>
                         <a href="">
@@ -59,6 +64,7 @@
                     </ul>
                 </div>
             </div>
+            <!-- WebsiteLogo -->
             <div class="Logo">
                 <img src="img/The Golden Spoon.png" alt="">
             </div>
@@ -66,6 +72,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-xmark" id="hdcross"></i>
             </div>
+            <!-- Top bar: user account & search -->
             <div class="nav">
                 <ul>
                     <a href="#">
@@ -82,6 +89,7 @@
                     </a>
                 </ul>
             </div>
+            <!-- Top bar: user account & search -->
             <div class="account">
                 <ul>
                     <a href="#">
@@ -107,6 +115,8 @@
             </div>
         </div>
     </header>
+
+    <!-- Top bar: user account & search -->
 
     <div class="home">
         <div class="main_slide">
@@ -210,7 +220,7 @@
                     </div>
                     <h3>Food name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="fav-price">$2.99</p>
+                    <p class="fav-price">$5.99</p>
                 </div>
                 <div class="item">
                     <div>
@@ -218,7 +228,7 @@
                     </div>
                     <h3>Food name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="fav-price">$2.99</p>
+                    <p class="fav-price">$6.99</p>
                 </div>
                 <div class="item">
                     <div>
@@ -226,7 +236,7 @@
                     </div>
                     <h3>Food name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="fav-price">$2.99</p>
+                    <p class="fav-price">$7.99</p>
                 </div>
             </div>
             <div class="dsgn"></div>
@@ -265,6 +275,5 @@
     </div>
 
     <script src="app.js"></script>
-</body>
 </body>
 </html>
