--- a/MyRestaurantRequiso.html
+++ b/MyRestaurantRequiso.html
@@ -18,6 +18,43 @@
     <!-- Website favicon (small icon in browser tab) -->
     <header>
         <div class="header">
+            <!--Sign up/Sign in Form-->
+            <div class="sign">
+                <div class="sign-box">
+                    <div class="bar">
+                        <i class="fa-solid fa-xmark" id="x-sign-mb"></i>
+                    </div>
+                    <!-- sign up form -->
+                    <div class="signup">
+                        <h3>Sign Up</h3>
+                        <form action="#">
+                            <label for="fullname">Enter Full Name</label></br>
+                            <input type="text" placeholder="Full Name" name="fullname" id=""></br>
+                            <label for="email">Enter E-mail</label></br>
+                            <input type="email" placeholder="E-mail" name="email" id=""></br>
+                            <label for="password">Create Password</label></br>
+                            <input type="password" placeholder="Password" name="password" id=""></br>
+                            <label for="copassword">Confirm Password</label></br>
+                            <input type="password" placeholder="Confirm Password" name="copassword" id=""></br>
+                            <input type="submit" value="Sign Up">
+                            <p id="to-signin">Already have an account? Sign In</p>
+                        </form>
+                    </div>
+                    <!-- sign in form -->
+                    <div class="signin">
+                        <h3>Sign In</h3>
+                        <form action="#">
+                            <label for="email2">Enter Your E-mail:</label>
+                            <input type="email" placeholder="E-mail" name="email2" id="">
+                            <label for="password2">Enter Password: </label>
+                            <input type="password" placeholder="Password" name="password2" id="">
+                            <input type="submit" value="Sign In">
+                        </form>
+                        <p>Forgot Password?</p>
+                        <p id="to-signup">Don't have an account? Sign Up</p>
+                    </div>
+                </div>
+            </div>
 <!-- Top bar: user account & search -->
             <div class="headerbar">
                 <div class="account">
@@ -46,15 +83,15 @@
                 <!-- Top bar: user account & search -->
                 <div class="nav">
                     <ul>
-                        <a href="">
+                        <a href="./MyRestaurantRequiso.html">
                             <li>Home</li>
                         </a>
 
-                        <a href="">
+                        <a href="./about.html">
                             <li>About</li>
                         </a>
 
-                        <a href="">
+                        <a href="./reservation.html">
                             <li>Reservation</li>
                         </a>
 
@@ -75,16 +112,16 @@
             <!-- Top bar: user account & search -->
             <div class="nav">
                 <ul>
-                    <a href="#">
+                    <a href="./MyRestaurantRequiso.html">
                         <li>Home</li>
                     </a>
-                    <a href="#">
+                    <a href="./about.html">
                         <li>About</li>
                     </a>
-                    <a href="#">
+                    <a href="./reservation.html">
                         <li>Reservation</li>
                     </a>
-                    <a href="#">
+                    <a href="./Menu.html">
                         <li>Food Menu</li>
                     </a>
                 </ul>
@@ -271,6 +308,40 @@
             <div class="chef">
                 <img src="img/9cb38c782a729f4ce1c3fffc1a51bdd4.jpg" alt="">
             </div>
+        </div>
+    </div>
+
+    <!--Section 6 (start)-->
+        <div class="letter">
+            <div class="letter-head">
+                <h2>Subscribe <span>Newsletter</span></h2>
+            </div>
+            <div class="letter-input">
+                <div>
+                    <input type="email" placeholder="Example@email.com">
+                </div>
+                <button class="red_btn">Subscribe</button>
+            </div>
+        </div>
+        <!--Section 6 (end)-->
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <div class="footer-1">
+            <div class="logo">
+                <img src="./img/The Golden Spoon.png" alt="logo">
+            </div>
+            <div>
+                <address>
+                    <p>Email: RequisoGabriel121@gmail.com</p>
+                    <p>School: Mapua MCM</p>
+                    <p>Catalunan Pequeno,</br>My Street, Davao City,</br> Philippines8000.</p>
+                </address>
+            </div>
+        </div>
+        <div class="footer-2">
+            <img src="./img/The Golden Spoon.png" alt="">
         </div>
     </div>
 
