--- a/developer.html
+++ b/developer.html
@@ -9,7 +9,7 @@
 <body class="developer-page">
    <div class="page-container">
       <h1>Meet the Developer</h1>
-      <p>This project was developed as part of the Module One Summative Assessment for Web Design and Development Laboratory.</p>
+      <p>A CPE student studying at Malayan Colleges aiming to be a web designer.</p>
       
       <div class="dev-cards">
          <div class="dev-card">
